@@ -39,15 +39,15 @@ namespace DAnCE
           dyn->destroy ();
         }
       catch (CORBA::Exception &ex)
-	{
-	  DANCE_ERROR (1, (LM_ERROR, DLINFO
-			   ACE_TEXT ("Any_Handler::extract_into_any - ")
-			   ACE_TEXT ("Caught CORBA Exception while extracting into ")
-			   ACE_TEXT ("dynany: %C\n"),
-			   ex._info ().c_str ()));
-	  throw Config_Error (ACE_TEXT (""), 
-			      ACE_TEXT ("CORBA Exception while extracting into dynany\n"));
-	}
+        {
+          DANCE_ERROR (1, (LM_ERROR, DLINFO
+                           ACE_TEXT ("Any_Handler::extract_into_any - ")
+                           ACE_TEXT ("Caught CORBA Exception while extracting into ")
+                           ACE_TEXT ("dynany: %C\n"),
+                           ex._info ().c_str ()));
+          throw Config_Error (ACE_TEXT (""), 
+                              ACE_TEXT ("CORBA Exception while extracting into dynany\n"));
+        }
       catch (Config_Error &ex)
         {
           throw ex;
